--- a/assets/css/pokeball.css
+++ b/assets/css/pokeball.css
@@ -19,7 +19,7 @@
     border-radius: 0 0 2rem 2rem;
     border-bottom: none;
     border-bottom: 1rem solid black;
-    background-color: red;
+    background-color: var(--ion-color-secondary);
 }
 
 .pokeball__half--white {
@@ -35,7 +35,7 @@
     z-index: 2;
     width: 5rem;
     height: 5rem;
-    background-color: black;
+    background-color: var(--ion-color-primary);
     border-radius: 50%;
     display: flex;
     justify-content: center;
