Fix width card details

--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -89,8 +89,8 @@ ion-col {
     }
 
     .container {
-        min-width: fit-content;
-        max-width: 80%;
+        min-width: 50%;
+        max-width: 50%;
     }
     .graf {
         width: 2rem;
