--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,3 +81,9 @@ a {
     /* Outros */
     --pokeball-animation-timing: 8s;
 }
+
+textarea:focus, input:focus, select:focus {
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
+} 
