--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -60,4 +60,8 @@ ion-content {
     .ion-padding-vertical {
         padding: 8rem;
     }
+
+    ion-card-title {
+        font-size: 1rem;
+    }
 }
